<resources>
    <string name="app_name">MvrxAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_wechat">WeChat</string>
    <string name="title_navigator">Navigator</string>
    <string name="title_project">Projects</string>
    <string name="login">Sign in</string>
    <string name="text_continue">Continue</string>
    <string name="nav_logout">登出</string>
    <string name="nav_my_collect">收藏</string>
    <string name="nav_setting">设置</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account? Sign in</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_text">Sign in to WanAndroid</string>
    <string name="create_account_text">Create a WanAndroid free Account</string>
    <string name="username_not_empty">UserName not be empty</string>
    <string name="password_not_empty">Password not be empty</string>
</resources>
