<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--fixme: 若BottomNavigationView和Navigation setUp的话 这里的id一定要与navigation文件夹下的nav.xml下面的fragment id 对应上-->
    <item
        android:id="@+id/nav_home"
        android:contentDescription="@string/title_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_dashboard"
        android:contentDescription="@string/title_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/nav_wechat"
        android:contentDescription="@string/title_wechat"
        android:icon="@drawable/ic_wechat"
        android:title="@string/title_wechat" />

    <item
        android:id="@+id/nav_navigator"
        android:contentDescription="@string/title_navigator"
        android:icon="@drawable/ic_navigation_black_24dp"
        android:title="@string/title_navigator" />

    <item
        android:id="@+id/nav_projects"
        android:contentDescription="@string/title_project"
        android:icon="@drawable/ic_project_black_24dp"
        android:title="@string/title_project" />
</menu>
