<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/viewBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_24"
            android:paddingTop="@dimen/dp_60"
            android:paddingRight="@dimen/dp_24">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_60"
                android:text="@string/sign_text"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@drawable/textview_border"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_8"
                android:paddingRight="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/sp_12" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/textview_border"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="@dimen/dp_8"
                android:paddingRight="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp_12" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_24"
                android:background="@drawable/btn_login_bg"
                android:gravity="center"
                android:padding="@dimen/dp_12"
                android:text="@string/login"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_24"
                android:gravity="center"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_animation" />
</FrameLayout>
